apps/ljwx-website/overlays/ljwx-website-dev/deployment-probe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ljwx-website
spec:
  template:
    spec:
      containers:
        - name: ljwx-website
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
