apps/ljwx-website/overlays/ljwx-website-dev/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ljwx-website
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
      nodePort: 32080
